# rust-font-tools

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
babelfont-rs/: Cargo.toml
babelfont-rs/crates/openstep-plist/: Cargo.toml
babelfont-rs/crates/openstep-plist/src/: lib.rs
babelfont-rs/src/: anchor.rs  axis.rs  common.rs  convertors.rs  error.rs  font.rs  glyph.rs  guide.rs  i18ndictionary.rs  instance.rs  layer.rs  lib.rs  master.rs  names.rs  shape.rs
babelfont-rs/src/convertors/: designspace.rs  fontlab.rs  glyphs3.rs  ufo.rs
crates/designspace/: Cargo.toml
crates/designspace/src/: lib.rs
crates/fonticulus/: Cargo.toml
crates/fonticulus/src/: basictables.rs  buildbasic.rs  fontinfo.rs  glyph.rs  main.rs  utils.rs
crates/fonttools-cli/: Cargo.toml
crates/fonttools-cli/src/: lib.rs
crates/openstep-plist/benches/: bigfile.rs
crates/openstep-plist/src/: lib.rs
crates/otspec/: Cargo.toml
crates/otspec/examples/: ttf-dump-graph.rs
crates/otspec/src/: counted.rs  de.rs  error.rs  layout.rs  lib.rs  offsetmanager.rs  offsets.rs  ser.rs  tables.rs  tag.rs  types.rs  utils.rs
crates/otspec/src/layout/: anchor.rs  classdef.rs  common.rs  contextual.rs  coverage.rs  device.rs  gpos1.rs  gpos2.rs  gpos4.rs  gpos5.rs  gpos6.rs  gsub3.rs  gsub8.rs  valuerecord.rs
crates/otspec/src/tables/: GPOS.rs  GSUB.rs  avar.rs
crates/otspec_macros/: Cargo.toml
crates/otspec_macros/src/: bound.rs  de.rs  fragment.rs  lib.rs  ser.rs  tables.rs  tag.rs
crates/otspec_macros/src/internals/: ast.rs  attr.rs  mod.rs  receiver.rs  symbol.rs
designspace/: Cargo.toml
designspace/src/: lib.rs
dschecker/: Cargo.toml
dschecker/src/: designspace.rs  interpolatability.rs  main.rs
fonticulus/: Cargo.toml
fonticulus/src/: basictables.rs  buildbasic.rs  fontinfo.rs  glyph.rs  kerning.rs  main.rs  notdef.rs  utils.rs
fonticulus/test/: harness.py  requirements.in
fonticulus/test/sources/: ACurve.glyphs  StupidFontBold.glyphs
fonticulus/test/sources/ACurve.ufo/: fontinfo.plist  lib.plist
fonticulus/test/sources/ACurve.ufo/glyphs/: _notdef.glif  a.glif  contents.plist
fonticulus/test/sources/PathOrder.ufo/glyphs/: A_.glif  B_.glif  E_.glif  contents.plist
fonticulus/test/sources/StupidFontBold.ufo/: lib.plist
fontspector/: Cargo.toml
fontspector/src/: check.rs  constants.rs  font.rs  main.rs  universal.rs
fontspector/src/checks/: bold_italic_unique.rs  mod.rs  name_trailing_spaces.rs  unwanted_tables.rs
fonttools-cli/: Cargo.toml
fonttools-rs/: Cargo.toml  README.md
fonttools-rs/crates/otspec/: Cargo.toml
fonttools-rs/crates/otspec/src/: counted.rs  tables.rs
fonttools-rs/crates/otspec_macros/: Cargo.toml
fonttools-rs/crates/otspec_macros/src/: bound.rs
fonttools-rs/crates/otspec_macros/src/internals/: mod.rs  symbol.rs
fonttools-rs/src/: font.rs  otvar.rs  table_store.rs  tables.rs
fonttools-rs/src/layout/: common.rs  contextual.rs  gpos2.rs  gpos3.rs  gpos4.rs  gpos5.rs  gpos6.rs  gsub1.rs  gsub2.rs  gsub3.rs  gsub4.rs  gsub8.rs  macros.rs
fonttools-rs/src/otvar/: instancer.rs  itemvariationstore.rs  iup.rs  locations.rs  packeddeltas.rs  packedpoints.rs  tuplevariationstore.rs
fonttools-rs/src/tables/: GDEF.rs  GPOS.rs  GSUB.rs  MATH.rs  STAT.rs  avar.rs  cmap.rs  cvt.rs  fpgm.rs  fvar.rs  gasp.rs  glyf.rs  gvar.rs  hmtx.rs  loca.rs  name.rs  os2.rs  post.rs  prep.rs
fonttools-rs/src/tables/glyf/: contourutils.rs  glyph.rs  point.rs
glyphcompiler-py/: Cargo.toml  pyproject.toml
glyphcompiler-py/glyphcompiler/: __init__.py
glyphcompiler-py/src/: glyph.rs  lib.rs
glyphslib/: Cargo.toml
glyphslib/resources/: KernFloats.glyphs
glyphslib/src/: common.rs  glyphs2.rs  glyphs3.rs  lib.rs  upgrade.rs
glyphslib/src/glyphs2/: curlybraceserde.rs
openstep-plist/: Cargo.toml
openstep-plist/src/: de.rs  error.rs  lib.rs  ser.rs
otmath/: Cargo.toml
otmath/src/: lib.rs
otspec/: Cargo.toml
otspec/examples/: ttf-dump-graph.rs
otspec/src/: counted.rs  offsetmanager.rs  tag.rs  types.rs  utils.rs
otspec/src/layout/: anchor.rs  classdef.rs  common.rs  contextual.rs  coverage.rs  device.rs  gpos1.rs  gpos5.rs  gsub1.rs  gsub2.rs  gsub4.rs  valuerecord.rs
otspec/src/tables/: avar.rs  head.rs
otspec_macros/: Cargo.toml
otspec_macros/src/: bound.rs  de.rs  lib.rs  tables.rs
otspec_macros/src/internals/: receiver.rs
src/: GDEF.rs  GPOS.rs  GSUB.rs  MATH.rs  STAT.rs  anchor.rs  avar.rs  axis.rs  basictables.rs  buildbasic.rs  cmap.rs  common.rs  convertors.rs  error.rs  font.rs  fontinfo.rs  fvar.rs  gasp.rs  glyf.rs  glyph.rs  guide.rs  gvar.rs  head.rs  hhea.rs  hmtx.rs  i18ndictionary.rs  instance.rs  kerning.rs  layer.rs  layout.rs  lib.rs  loca.rs  main.rs  master.rs  maxp.rs  name.rs  notdef.rs  os2.rs  otvar.rs  post.rs  (+6 more)
src/convertors/: designspace.rs  fontlab.rs  glyphs3.rs  ufo.rs
src/glyf/: component.rs  contourutils.rs  glyph.rs  point.rs
src/layout/: anchor.rs  classdef.rs  common.rs  contextual.rs  coverage.rs  device.rs  gpos1.rs  gpos2.rs  gpos3.rs  gpos4.rs  gpos5.rs  gpos6.rs  gsub1.rs  gsub2.rs  gsub3.rs  gsub4.rs  gsub8.rs  macros.rs  valuerecord.rs
src/otvar/: glyphvariationdata.rs  instancer.rs  itemvariationstore.rs  iup.rs  locations.rs  packeddeltas.rs  packedpoints.rs  tuplevariationheader.rs  tuplevariationstore.rs
src/tables/: GDEF.rs  GPOS.rs  GSUB.rs  MATH.rs  STAT.rs  avar.rs  cmap.rs  cvt.rs  fpgm.rs  fvar.rs  gasp.rs  glyf.rs  gvar.rs  head.rs  hhea.rs  hmtx.rs  loca.rs  maxp.rs  name.rs  os2.rs  post.rs  prep.rs
src/tables/glyf/: component.rs  glyph.rs
test/: harness.py  jfont.py
test/sources/: SimpleTwoAxis.glyphs
test/sources/PathOrder.ufo/: fontinfo.plist  lib.plist
test/sources/StupidFontBold.ufo/: fontinfo.plist
triangulate/: Cargo.toml
triangulate/src/: fontinfo.rs  glyph.rs  instance.rs  interpolate.rs  kerning.rs  main.rs  noradextensions.rs
ufo-cu2qu/: Cargo.toml
ufo-cu2qu/src/: main.rs
ufo-decompose/: Cargo.toml
ufo-decompose/src/: main.rs
ufodiff/: Cargo.toml
ufodiff/src/: diff.rs  main.rs
(+5 files in other folders)
