[workspace]

members = [ ".", "crates/otspec", "crates/otspec_macros", "crates/fonttools-cli", "crates/designspace","crates/fonticulus" ]

[package]
name = "fonttools"
version = "0.1.0"
authors = ["Simon Cozens <simon@simon-cozens.org>"]
edition = "2018"
license = "Apache-2.0"
description = "A library for reading, manipulating and writing OpenType font files"
repository = "https://github.com/simoncozens/fonttools-rs"

[dependencies]
chrono = { version = "0.4.3" }
otspec = { path = "crates/otspec", version = "*" } 
otspec_macros = { path = "crates/otspec_macros", version = "*" } 
kurbo = { version = "0.8.1" }
bitflags = "1.2.1"
itertools = "0.10.0"
encoding = "0.2"
log = "0.4"
env_logger = "0.8"
counter = "0.5"
rayon = { version = "1.0.1", optional = true }
permutation = "0.2.5"

[dev-dependencies]
assert_approx_eq = "1.1.0"
pretty_assertions = "0.7.2"
