[workspace]

members = [ ".", "crates/openstep-plist" ]

[package]
name = "babelfont"
version = "0.1.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.3" }
kurbo = { git="https://github.com/linebender/kurbo"  }
openstep-plist = { path = "./crates/openstep-plist" }
snafu = "0.6.10"
uuid = { version = "0.8", features = ["v4"] }
shrinkwraprs = "0.3.0"
fonttools = { path = "../fonttools-rs", features = ["rayon"], version = "0" }
norad = { version = "0.5.1", git="https://github.com/linebender/norad", features = ["rayon", "kurbo"]}
designspace = { path = "../fonttools-rs/crates/designspace", features = ["norad"], version = "0" }
lazy_static = "1.4.0"
log = "0.4.14"
env_logger = "0.9.0"
serde-xml-rs = "0.4"
