[package]
name = "babelfont"
version = "0.1.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.3" }
kurbo = "0.8"
openstep-plist = { path = "../openstep-plist" }
snafu = "0.6.10"
uuid = { version = "0.8", features = ["v4"] }
shrinkwraprs = "0.3.0"
fonttools = { path = "../fonttools-rs", features = ["rayon"], version = "0" }
norad = { version = "0.6", features = ["rayon", "kurbo"]}
designspace = { path = "../designspace", features = ["norad"], version = "0" }
lazy_static = "1.4.0"
log = "0.4.14"
env_logger = "0.9.0"
serde-xml-rs = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rayon = "1.0.1"
regex = "1.5.5"
