[package]
name = "babelfont"
version = "0.1.1"
edition = "2021"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
uuid = { version = "1.11.0", features = ["v4"] }
[target.'cfg(target_family = "wasm")'.dependencies]
uuid = { version = "1.11.0", features = ["v4", "js"] }

[features]
default = ["glyphs", "ufo", "fontlab"]
glyphs = ["dep:glyphslib"]
ufo = ["dep:norad"]
fontlab = []

[dependencies]
chrono = { version = "0.4.3" }
kurbo = "0.8"
glyphslib = { path="../glyphslib", optional = true }
norad = { version = "0.7.0", features = ["rayon", "kurbo"], optional = true }
log = "0.4.14"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.37"
regex = "1.5.5"
fontdrasil = "0.0.1"
write-fonts = { version = "0.25.0" }                                          # Must use version fontdrasil uses
