[package]
name = "openstep-plist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.1"
snafu = "0.6.10"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bigfile"
harness = false
