[package]
name = "openstep-plist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.1"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2"
ordered-float = { version = "4.5", features = ["serde"] }
smol_str = { version = "0.3", features = ["serde"] }

[dev-dependencies]
criterion = "0.3"
otspec = { path = "../otspec" }

[[bench]]
name = "bigfile"
harness = false
