[package]
name = "otmath"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Mathematical operations useful for OpenType fonts"
repository = "https://github.com/simoncozens/rust-font-tools"
authors = ["Simon Cozens <simon@simon-cozens.org>"]

[dependencies]
permutation = "0.2.5"
num = "0.4.0"


[dev-dependencies]
assert_approx_eq = "1.1.0"
