[package]
name = "triangulate"
version = "0.1.0"
authors = ["Simon Cozens <simon@simon-cozens.org>"]
edition = "2021"
license = "Apache-2.0"
description = "Interpolate an instance UFO in a designspace"
repository = "https://github.com/simoncozens/rust-font-tools"

[dependencies]
otmath = { path = "../otmath" }
rbf-interp = "*"
nalgebra = "^0.18"
rayon = "1.0.1"
norad = { version = "0.11.0", features = ["rayon", "kurbo"] }
clap = { version = "3.1.17", features=["derive"]}
regex = "1.5.4"
env_logger = "0.8"
ndarray = "0.15.1"
log = "0.4.14"
