[package]
name = "ufodiff"
version = "0.1.0"
authors = ["Simon Cozens <simon@simon-cozens.org>"]
edition = "2021"
license = "Apache-2.0"
description = "Show differences between two UFO fonts"
repository = "https://github.com/simoncozens/rust-font-tools"

[dependencies]
norad = { version = "0.11.0", features = ["rayon", "kurbo"] }
clap = { version = "3.1.17", features=["derive"]}
log = "0.4.14"
serde = "1.0.113"
serde_json = "1.0.113"
serde_json_diff = "0.2.0"