[package]
name = "designspace"
version = "0.1.0"
authors = ["Simon Cozens <simon@simon-cozens.org>"]
edition = "2018"

[dependencies]
serde-xml-rs = "0.4.1"
serde = { version = "1.0", features = ["derive"] }
fonttools = { path = "../.." }
otspec = { path = "../otspec" }
norad = {  git = "https://github.com/linebender/norad", features = ["rayon", "kurbo"] }
