[package]
name = "fonttools_cli"
version = "0.1.0"
authors = ["Simon Cozens <simon@simon-cozens.org>"]
edition = "2018"

[dependencies]
fonttools = { path = "../..", features = ["rayon"] }
clap = "2.33.3"
itertools = "0.10.0"
skia-safe = "0"
norad = {  git = "https://github.com/linebender/norad", features = ["rayon", "kurbo"] }
log = "0.4.14"
env_logger = "0.8"
