[package]
name = "otspec"
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"
description = "Utility library for reading/writing OpenType data structures"
repository = "https://github.com/simoncozens/fonttools-rs"
authors = ["Simon Cozens <simon@simon-cozens.org>"]

[dependencies]
shrinkwraprs = "0.3.0"
otspec_macros = { path = "../otspec_macros", version = "*" }
chrono = { version = "0.4.3" }
fixed = "1"
