[package]
name = "otspec"
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"
description = "Utility library for reading/writing OpenType data structures"
repository = "https://github.com/simoncozens/fonttools-rs"
authors = ["Simon Cozens <simon@simon-cozens.org>"]

[dependencies]
shrinkwraprs = "0.3.0"
otspec_macros = { path = "../otspec_macros", version = "0" }
chrono = { version = "0.4.3" }
fixed = "1"
petgraph = "0.5.1"
num = "0.4.0"

[dev-dependencies]
clap = "2.33.3"
fonttools = { path="../.."}

[[example]]
name="ttf-dump-graph"
